Casi terminado todos los métodos necesarios para la API, limpieza con SonarQube.